fix the gap between sections

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -108,6 +108,10 @@ code {
     box-shadow: none !important;
   }
 
+  .site-section {
+    padding: 3em 0;
+  }
+
   @media (min-width: 768px) {
     .site-section {
       padding: 10em 0;
